--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,11 +1,10 @@
 name: figuras_flame
-description: A Flutter package with figures of animals and objects for flutter flame package.
+description: A package with figures of animals and objects drawn on canvas for the flame package.
 version: 0.0.1
-homepage:
+homepage: https://github.com/NestorLeon/figuras_flame
 
 environment:
   sdk: '>=2.18.4 <3.0.0'
-  flutter: ">=1.17.0"
 
 dependencies:
   flame: ^1.6.0
@@ -13,4 +12,3 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.0
