--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -1,2 +1,1 @@
-# Additional information about this file can be found at
-# https://dart.dev/guides/language/analysis-options
+include: package:flutter_lints/flutter.yaml
